--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Work in Progress</title>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Dave's Hello World</title>
+    <style>
+        body {
+            margin: 20px;
+            padding: 20px;
+            background-color: rgb(34, 32, 32);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color:green;
+        }
+        header {
+            background-color: red;
+            height: 50px;
+            padding: 20px;
+        }
+        #top {
+            height: 200px;
+            
+        }
+        #middle {
+            height: 200px;
+            border: 3px dotted red;
+            text-align: center;
+            font-size: 30px;
 
-</body>
+        }
+        #bottom {
+            height: 200px;
+            border: 3px dotted red;
+            text-align: center;
+            font-size: 30px;
+        }
+        .btn {
+            background-color: rgb(91, 180, 8);
+            padding: 10px;
+        } 
+        h1 {
+            color: red;
+            text-align: center;
+            font-size: 70px;
+            font-weight: bold;
+            height: 100px;
+            margin: 20px;
+            padding: 20px;
+        }
+        p {
+            color: chartreuse;
+            text-align: center;
+            font-size: 40px;
+        }
+        footer {
+            background-color: darkgreen;
+            height: 50px;
+            padding: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="mainStyle.css">
+  </head>
+  <body>
+    <header>
+        <nav>
+            <a class="btn" href="index.html">Home</a>
+            <a class="btn" href="resume.html">Resume</a>
+            <a class="btn" href="interests.html">Interests</a>
+            <a class="btn" href="goals.html">Goals</a>
+            <a class="btn" href="projects.html">Projects</a>    
+        </nav>
+    </header>
+    <div id="top">
+        <h1>Hello World</h1>
+    </div>
+    <p>This is My first Hello World!!! web page.</p>
+    <div id="middle"> 
+        # Fallowing in the foot steps of all other programmers befor me.
+    </div>
+    <div id="bottom">
+        Believe in Your self. Believe that any thing is possible and remember, Its never to late.
+    </div>
+    <footer>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="resume.html">Resume</a>
+            <a href="interests.html">Interests</a>
+            <a href="goals.html">Goals</a>
+            <a href="projects.html">Projects</a>    
+        </nav>
+    </footer>
+  </body>
 </html>
