--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <p>This is My first Hello World!!! web page.</p>
     <div id="middle"> 
-        # Fallowing in the foot steps of all other programmers befor me.
+        # Following in the foot steps of all other programmers befor me.
     </div>
     <div id="bottom">
         Believe in Your self. Believe that any thing is possible and remember, Its never to late.
