--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
             border: 3px dotted red;
             text-align: center;
             font-size: 30px;
-
+            position: relative;
         }
         #bottom {
             height: 200px;
             border: 3px dotted red;
             text-align: center;
             font-size: 30px;
+            position: relative;
         }
         .btn {
             background-color: rgb(91, 180, 8);
@@ -77,7 +78,7 @@
         # Following in the foot steps of all other programmers befor me.
     </div>
     <div id="bottom">
-        Believe in Your self. Believe that any thing is possible and remember, Its never to late.
+        Believe in Your self. Believe that any thing is possible and remember, Its never too late.
     </div>
     <footer>
         <nav>
