Added CSS hover

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             font-size: 30px;
             position: relative;
         }
+
+        a:hover {
+            font-weight: bold;
+        }
+        
         .btn {
             background-color: rgb(91, 180, 8);
             padding: 10px;
