--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <nav>
             <a class="btn" href="index.html">Home</a>
             <a class="btn" href="resume.html">Resume</a>
-            <a class="btn" href="/interests.html">Interests</a>
+            <a class="btn" href="interests.html">Interests</a>
             <a class="btn" href="goals.html">Goals</a>
             <a class="btn" href="projects.html">Projects</a>    
         </nav>
