--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <header>
         <nav>
             <a class="btn" href="index.html">Home</a>
-            <a class="btn" href="/resume.html">Resume</a>
-            <a class="btn" href="/interests.html">Interests</a>
-            <a class="btn" href="/goals.html">Goals</a>
-            <a class="btn" href="/projects.html">Projects</a>    
+            <a class="btn" href="resume.html">Resume</a>
+            <a class="btn" href="interests.html">Interests</a>
+            <a class="btn" href="goals.html">Goals</a>
+            <a class="btn" href="projects.html">Projects</a>    
         </nav>
     </header>
     <div id="top">
