--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     </div>
     <p>This is My first Hello World!!! web page.</p>
     <div id="middle"> 
-        # Following in the foot steps of all other programmers befor me.
+        # Following in the foot steps of all other programmers before me.
     </div>
     <div id="bottom">
-        Believe in Your self. Believe that any thing is possible and remember, Its never too late.
+        Believe in Yourself. Believe that anything is possible and remember, It's never too late.
     </div>
     <footer>
         <nav>
