--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Dave's Hello World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        
+        
+
         body {
             margin: 20px;
             padding: 20px;
