--- a/interests.html
+++ b/interests.html
@@ -3,6 +3,7 @@
         <head>
             <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
             <title>Interests</title>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
         <body>
             <header>
