Updated index with @media

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Dave's Hello World</title>
     <style>
         
-        
+        @media (min-width: 600px) {
+            p::before {
+                content: "Welcome! "
+            }
+        }
+
 
         body {
             margin: 20px;
