--- a/interests.html
+++ b/interests.html
@@ -42,9 +42,21 @@
                     </ul>
                     <li>Engineering</li>
                     <ul>
-                        <li>Mechanical: Robotics</li>
-                        <li>Aero Space: Drones, SpaceCrafts</li>
-                        <li>Electrical: Computers, Programming, AI</li>
+                        <li>Mechanical:</li>
+                        <ul>
+                            <li>Robotics</li>
+                        </ul>
+                        <li>Aero Space:</li>
+                        <ul>
+                            <li>Drones</li>
+                            <li>SpaceCrafts</li>
+                        </ul>
+                        <li>Electrical:</li>
+                        <ul>
+                            <li>Computers</li>
+                            <li>Programming</li>
+                            <li>AI</li>
+                        </ul>
                     </ul>
                 </ul>
                 <h3>Math</h3>
@@ -74,7 +86,6 @@
                 <h3>Growing plants and Food</h3>
                 <h3>Taking Care of The Planet</h3>
                 <h3>Traveling</h3>
-                <p>Going to new places</p>
 
             </div>
             <footer>
