--- a/interests.html
+++ b/interests.html
@@ -80,7 +80,7 @@
                     <li>General Artificial Intelligence</li>
                 </ul>
                 <h3>Music - Sound - Vibration</h3>
-                <p>All Energy moves and Vibrates at a certain Frequency</p>
+                <p>All Energy Flows and Vibrates at a certain Frequency</p>
                 <h3>Space</h3>
                 <p>Whats Really out there?</p>
                 <h3>Growing plants and Food</h3>
