--- a/interests.html
+++ b/interests.html
@@ -82,7 +82,7 @@
                 <h3>Music - Sound - Vibration</h3>
                 <p>All Energy Flows and Vibrates at a certain Frequency</p>
                 <h3>Space</h3>
-                <p>Whats Really out there?</p>
+                <p>What's Really out there?</p>
                 <h3>Growing plants and Food</h3>
                 <h3>Taking Care of The Planet</h3>
                 <h3>Traveling</h3>
