--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dave's Hello World</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         
         @media (min-width: 600px) {
@@ -84,7 +85,7 @@
         }
         footer {
             background-color: chartreuse;
-            height: 30px;
+            height: 50px;
             padding: 20px;
             font-size: 20px;
         }
