--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         @media (min-width: 600px) {
             p::before {
-                content: "Welcome! "
+                content: "Welcome!!! "
             }
         }
 
