my basic resume

--- a/goals.html
+++ b/goals.html
@@ -28,6 +28,7 @@
                 <ul>
                     <li>2</i>
                 </ul>
+                <p>I never understood the power of writing down your goals untill now.</p>
             </div>
             <div id="footer">
                 <p>Belmar, NJ</p>
