--- a/resume.html
+++ b/resume.html
@@ -15,19 +15,19 @@
                 <h4>Experience</h4>
                 <p>Working on that...</p>
                 <ul>
-                    <li>1</li>
-                    <li>2</li>
+                    <li>Coming soon...</li>
+                    <li>Personal project 0</li>
+                    <li>Personal project 1</li>
+                    <li>Personal project 2</li>
                 </ul>
                 <h4>Skills</h4>
                 <p>Languages: Python, JavaScript, SQL</p>
                 <p>Frameworks: Flask, Django, Node.js, React</p>
-                <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap, Unittest, API's</p>
-                <p>Tech Studied on side: C/C++, Java, </p>
+                <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap, Unittest, API's, AJAX</p>
+                <p>Tech Studied on side: C/C++, Java, C#</p>
                 <h4>Education</h4>
-                <p>2 Years Rutgers University</p>
-                <ul>
-                    <li>High School</li>
-                </ul>
+                <p>2 Years MAE Rutgers University</p>
+                <p>Self oriented</p>
             </div>
             <footer>
                 <p>Belmar, NJ</p>
