--- a/goals.html
+++ b/goals.html
@@ -5,10 +5,17 @@
             <title>Goals</title>
         </head>
         <body>
-            <div id="header">
-                <p id="name">My Goals</p>
-                <a href=""><p id="email">JDavidZapata1983@gmail.com</p></a>
-            </div>
+            <header>
+                <p id="name">My Interests</p>
+                <nav>
+                    <a class="btn" href="index.html">Home</a>
+                    <a class="btn" href="resume.html">Resume</a>
+                    <a class="btn" href="interests.html">Interests</a>
+                    <a class="btn" href="goals.html">Goals</a>
+                    <a class="btn" href="projects.html">Projects</a>    
+                </nav>
+                          
+            </header>
             <div class="left"></div>
             <div class="right">
                 <h1>Goal's are a wonderfull thing.</h1>
