--- a/goals.html
+++ b/goals.html
@@ -6,7 +6,7 @@
         </head>
         <body>
             <header>
-                <p id="name">My Interests</p>
+                <div id="name">My Goals</div>
                 <nav>
                     <a class="btn" href="index.html">Home</a>
                     <a class="btn" href="resume.html">Resume</a>
@@ -14,10 +14,9 @@
                     <a class="btn" href="goals.html">Goals</a>
                     <a class="btn" href="projects.html">Projects</a>    
                 </nav>
-                          
             </header>
-            <div class="left"></div>
-            <div class="right">
+            <div class="menu"></div>
+            <div class="content">
                 <h1>Goal's are a wonderfull thing.</h1>
                 <h1>They will keep you moving in the right direction.</h1>
                 
