--- a/goals.html
+++ b/goals.html
@@ -1,13 +1,13 @@
 <HTML><!DOCTYPE html>
     <html>
         <head>
-            <link type="text/css" rel="stylesheet" href="mainstylesheet.css"/>
+            <link type="text/css" rel="stylesheet" href="goalstylesheet.css"/>
             <title>Goals</title>
         </head>
         <body>
-            <header>
+            <header id="header">
                 <div id="name">My Goals</div>
-                <nav>
+                <nav id="nav">
                     <a class="btn" href="index.html">Home</a>
                     <a class="btn" href="resume.html">Resume</a>
                     <a class="btn" href="interests.html">Interests</a>
