--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
         body {
-            margin: 20px;
+            margin: 10px;
             padding: 20px;
             background-color: rgb(34, 32, 32);
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -25,7 +25,10 @@
             height: 60px;
             /*padding: 5px;*/
             font-size: 20px;
-            letter-spacing: 0.7px;            
+            letter-spacing: 0.5px;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;            
         }
         #top {
             height: 200px;
@@ -65,7 +68,7 @@
 
        .btn {
             background-color: chartreuse;
-            padding: 10px;
+            padding: 8px;
             color: darkgreen;
             font-family: fantasy;
         } 
@@ -86,8 +89,9 @@
         footer {
             background-color: chartreuse;
             height: 50px;
-            padding: 20px;
-            font-size: 20px;
+            padding: 15px;
+            font-size: 18px;
+            font-weight: bold;
         }
     </style>
     <link rel="stylesheet" href="mainStyle.css">
