--- a/interests.html
+++ b/interests.html
@@ -5,9 +5,9 @@
             <title>Interests</title>
         </head>
         <body>
-            <header>
+            <header id="header">
                 <p id="name">My Interests</p>
-                <nav>
+                <nav id="nav">
                     <a class="btn" href="index.html">Home</a>
                     <a class="btn" href="resume.html">Resume</a>
                     <a class="btn" href="interests.html">Interests</a>
@@ -88,7 +88,7 @@
                 <h3>Traveling</h3>
 
             </div>
-            <footer>
+            <footer id="footer">
                 <p>Belmar, NJ</p>
             </footer>          
         </body>
