--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
     </div>
     <p>This is My first Hello World!!! web page.</p>
     <div id="middle"> 
-        # Following in the foot steps of all other programmers before me.
+        <h2>Work in Progress...</h2>
+        <h3>
+            # Following in the foot steps of all other programmers before me.
+        </h3>
     </div>
     <div id="bottom">
         Believe in Yourself. Believe that anything is possible and remember, It's never too late.
