--- a/interests.html
+++ b/interests.html
@@ -14,80 +14,80 @@
                     <a class="btn" href="goals.html">Goals</a>
                     <a class="btn" href="projects.html">Projects</a>    
                 </nav>
-                  
             </header>
-            <div class="left"></div>
-            <div class="right">
-                <h1>Too Many</h1>
-                <h2>Here's a few...</h2>
-                <h3>Living Life Healthy</h3>
-                <p>Working on it...</p>
-                <h3>Science</h3>
-                <ul>
-                    <li>Biology -</li>
+            <div id="clearfix">
+                <div class="left">.</div>
+                <div class="right">
+                    <h1>Too Many</h1>
+                    <h2>Here's a few...</h2>
+                    <h3>Living Life Healthy</h3>
+                    <p>Working on it...</p>
+                    <h3>Science</h3>
                     <ul>
-                        <li>Our Body: How do we live longer?</li>
-                        <li>DNA</li>
-                    </ul>
-                    <li>Psycology -</li>
-                    <ul>
-                        <li>Our Mind: Who are we?</li>
-                        <li>Neuro Science</li>
-                    </ul>
-                    <li>Physics -</li>
-                    <ul>
-                        <li>Magnetism</li>
-                        <li>Light</li>
-                        <li>Sound</li>
-                    </ul>
-                    <li>Engineering -</li>
-                    <ul>
-                        <li>Mechanical:</li>
+                        <li>Biology -</li>
                         <ul>
-                            <li>Robotics</li>
+                            <li>Our Body: How do we live longer?</li>
+                            <li>DNA</li>
                         </ul>
-                        <li>Aero Space:</li>
+                        <li>Psycology -</li>
                         <ul>
-                            <li>Drones</li>
-                            <li>SpaceCrafts</li>
+                            <li>Our Mind: Who are we?</li>
+                            <li>Neuro Science</li>
                         </ul>
-                        <li>Electrical:</li>
+                        <li>Physics -</li>
                         <ul>
-                            <li>Computers</li>
-                            <li>Programming</li>
-                            <li>AI</li>
+                            <li>Magnetism</li>
+                            <li>Light</li>
+                            <li>Sound</li>
+                        </ul>
+                        <li>Engineering -</li>
+                        <ul>
+                            <li>Mechanical:</li>
+                            <ul>
+                                <li>Robotics</li>
+                            </ul>
+                            <li>Aero Space:</li>
+                            <ul>
+                                <li>Drones</li>
+                                <li>SpaceCrafts</li>
+                            </ul>
+                            <li>Electrical:</li>
+                            <ul>
+                                <li>Computers</li>
+                                <li>Programming</li>
+                                <li>AI</li>
+                            </ul>
                         </ul>
                     </ul>
-                </ul>
-                <h3>Math</h3>
-                <ul>
-                    <li>Calculus</li>
-                    <li>Linear Algebra</li>
-                    <li>Statistics and Probability</li>
-                    <li>Vortex Math</li>
-                </ul>
-                <h3>Business</h3>
-                <ul>
-                    <li>Finance: How to handle Money</li>
-                    <li>Stock Market</li>
-                </ul>
-                <h3>History</h3>
-                <p>All Ancient and Hiden History</p>
-                <h3>Technology</h3>
-                <ul>
-                    <li>Wearable Tech</li>
-                    <li>Autonomus Vehicles</li>
-                    <li>General Artificial Intelligence</li>
-                </ul>
-                <h3>Music - Sound - Vibration</h3>
-                <p>All Energy Flows and Vibrates at a certain Frequency</p>
-                <h3>Space</h3>
-                <p>What's Really out there?</p>
-                <h3>Growing plants and Food</h3>
-                <h3>Taking Care of The Planet</h3>
-                <h3>Traveling</h3>
-
-            </div>
+                    <h3>Math</h3>
+                    <ul>
+                        <li>Calculus</li>
+                        <li>Linear Algebra</li>
+                        <li>Statistics and Probability</li>
+                        <li>Vortex Math</li>
+                    </ul>
+                    <h3>Business</h3>
+                    <ul>
+                        <li>Finance: How to handle Money</li>
+                        <li>Stock Market</li>
+                    </ul>
+                    <h3>History</h3>
+                    <p>All Ancient and Hiden History</p>
+                    <h3>Technology</h3>
+                    <ul>
+                        <li>Wearable Tech</li>
+                        <li>Autonomus Vehicles</li>
+                        <li>General Artificial Intelligence</li>
+                    </ul>
+                    <h3>Music - Sound - Vibration</h3>
+                    <p>All Energy Flows and Vibrates at a certain Frequency</p>
+                    <h3>Space</h3>
+                    <p>What's Really out there?</p>
+                    <h3>Growing plants and Food</h3>
+                    <h3>Taking Care of The Planet</h3>
+                    <h3>Traveling</h3>
+                    </div>
+                </div>
             <footer id="footer">
                 <p>Belmar, NJ</p>
             </footer>          
