--- a/goals.html
+++ b/goals.html
@@ -19,22 +19,22 @@
             <div class="content">
                 <h1>Goal's are a wonderfull thing.</h1>
                 <h1>They will keep you moving in the right direction.</h1>
-                
+                <h2>Familly is the most important thing.</h2>
+                <h3>Therefore, I will be the best father I can be and help my familly as much as I can.</h3>
                 <h2>Health and nutrition are extremly important.</h2>
-                <h3>Thus, I be as healthy as possible.</h3>
-                <h2>Familly is always important.</h2>
-                <h3>Therefor I will help my familly as much as I can.</h3>
+                <h3>Thus, I will be as healthy as possible.</h3>
                 <h2>I will explore as many new possibilities as I can.</h2>
-                <h2>Personal Development is also important.</h2>
+                <h3>Becoming Braver and Bolder.</h3>
+                <h2>Personal Development is also very important.</h2>
                 <h3>Hence, I will be the best I can possibly be.</h3>
                 <h2>I will Learn New Skills</h2>
                 <p>1. Programming</p>
                 <p>2. Psycology</p>
                 <p>3. Bussiness</p>
                 <h2>I will learn how to learn.</h2>
-                <h3>In order to become a better student.</h3>
-                <h2>I will learn the Steps to Wealth</h2>
-                <p>I never understood the power of writing down your goals untill now.</p>
+                <h3>In order to become a better learner.</h3>
+                <h2>I will learn how to LIVE better more fulfilling LIFE.</h2>
+                <p>I never understood the power of writing down your goal's until now.</p>
             </div>
             <div id="footer">
                 <p>Belmar, NJ</p>
