--- a/interests.html
+++ b/interests.html
@@ -16,7 +16,7 @@
                 </nav>
             </header>
             <div id="clearfix">
-                <div class="left">.</div>
+                <div class="left"></div>
                 <div class="right">
                     <h1>Too Many</h1>
                     <h2>Here's a few...</h2>
@@ -39,6 +39,7 @@
                             <li>Magnetism</li>
                             <li>Light</li>
                             <li>Sound</li>
+                            <li>Energy</li>
                         </ul>
                         <li>Engineering -</li>
                         <ul>
@@ -55,7 +56,6 @@
                             <ul>
                                 <li>Computers</li>
                                 <li>Programming</li>
-                                <li>AI</li>
                             </ul>
                         </ul>
                     </ul>
@@ -76,7 +76,7 @@
                     <h3>Technology</h3>
                     <ul>
                         <li>Wearable Tech</li>
-                        <li>Autonomus Vehicles</li>
+                        <li>Autonomous Vehicles</li>
                         <li>General Artificial Intelligence</li>
                     </ul>
                     <h3>Music - Sound - Vibration</h3>
