--- a/interests.html
+++ b/interests.html
@@ -18,8 +18,8 @@
             <div id="clearfix">
                 <div class="left"></div>
                 <div class="right">
-                    <h1>Too Many</h1>
-                    <h2>Here's a few...</h2>
+                    <h1 id="mainheading">Too Many</h1>
+                    <h2 class="heading">Here's a few...</h2>
                     <h3>Living Life Healthy</h3>
                     <p>Working on it...</p>
                     <h3>Science</h3>
