--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <HTML><!DOCTYPE html>
     <html>
         <head>
+            <link type="text/css" rel="resumestylesheet" href="stylesheet.css"/>
             <title>Resume</title>
         </head>
         <body>
