--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <HTML><!DOCTYPE html>
     <html>
         <head>
-            <link type="text/css" rel="resumestylesheet" href="stylesheet.css"/>
+            <link type="text/css" rel="stylesheet" href="resumestylesheet.css"/>
             <title>Resume</title>
         </head>
         <body>
@@ -12,7 +12,7 @@
             <div class="left"></div>
             <div class="right">
                 <h4>Objective</h4>
-                <p>To take a position as a software engineer.</p>
+                <p>To take a position as a software developer/engineer.</p>
                 <h4>Experience</h4>
                 <p>Working on that...</p>
                 <ul>
@@ -26,6 +26,7 @@
                 <p>Frameworks: Flask, Django, Node.js, React</p>
                 <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap, Unittest, API's, AJAX</p>
                 <p>Tech Studied on side: C/C++, Java, C#</p>
+                <p>Non-Technical: Telemarketing, Service, Residencial Construction</p>
                 <h4>Education</h4>
                 <p>2 Years MAE Rutgers University</p>
                 <p>Self oriented</p>
