--- a/resume.html
+++ b/resume.html
@@ -1,38 +1,46 @@
-<HTML><!DOCTYPE html>
-    <html>
-        <head>
-            <link type="text/css" rel="stylesheet" href="resumestylesheet.css"/>
-            <title>Resume</title>
-        </head>
-        <body>
-            <header>
-                <p id="name">Juan David Zapata</p>
-                <a href="mailto:JDavidZapata1983@gmail.com"><p id="email">JDavidZapata1983@gmail.com</p></a>
-            </header>
-            <div class="left"></div>
-            <div class="right">
-                <h4>Objective</h4>
-                <p>To take a position as a software developer/engineer.</p>
-                <h4>Experience</h4>
-                <p>Working on that...</p>
-                <ul>
-                    <li>Coming soon...</li>
-                    <li>Personal project 0</li>
-                    <li>Personal project 1</li>
-                    <li>Personal project 2</li>
-                </ul>
-                <h4>Skills</h4>
-                <p>Languages: Python, JavaScript, SQL</p>
-                <p>Frameworks: Flask, Django, Node.js, React</p>
-                <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap, Unittest, API's, AJAX</p>
-                <p>Tech Studied on side: C/C++, Java, C#</p>
-                <p>Non-Technical: Telemarketing, Service, Residencial Construction</p>
-                <h4>Education</h4>
-                <p>2 Years MAE Rutgers University</p>
-                <p>Self oriented</p>
-            </div>
-            <footer>
-                <p>Belmar, NJ</p>
-            </footer>
-        </body>
-    </html>
+<HTML>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link type="text/css" rel="stylesheet" href="resumestylesheet.css" />
+    <title>Resume</title>
+</head>
+
+<body>
+    <header>
+        <p id="name">Juan David Zapata</p>
+        <a href="mailto:JDavidZapata1983@gmail.com">
+            <p id="email">JDavidZapata1983@gmail.com</p>
+        </a>
+    </header>
+    <div id="clearfix">
+        <div class="left"></div>
+        <div class="right">
+            <h4>Objective</h4>
+            <p>To take a position as a software developer/engineer.</p>
+            <h4>Experience</h4>
+            <p>Working on that...</p>
+            <ul>
+                <li>Coming soon...</li>
+                <li>Personal project 0</li>
+                <li>Personal project 1</li>
+                <li>Personal project 2</li>
+            </ul>
+            <h4>Skills</h4>
+            <p>Languages: Python, JavaScript, SQL</p>
+            <p>Frameworks: Flask, Django, Node.js, React</p>
+            <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap, Unittest, API's, AJAX</p>
+            <p>Tech Studied on side: C/C++, Java, C#</p>
+            <p>Non-Technical: Telemarketing, Service, Residencial Construction</p>
+            <h4>Education</h4>
+            <p>2 Years MAE Rutgers University</p>
+            <p>Self oriented</p>
+        </div>
+    </div>
+    <footer>
+        <p>Belmar, NJ</p>
+    </footer>
+</body>
+
+</html>
