--- a/interests.html
+++ b/interests.html
@@ -1,7 +1,7 @@
 <HTML><!DOCTYPE html>
     <html>
         <head>
-            <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+            <link type="text/css" rel="stylesheet" href="intereststylesheet.css"/>
             <title>Interests</title>
         </head>
         <body>
