--- a/resume.html
+++ b/resume.html
@@ -38,8 +38,16 @@
             <p>Self oriented</p>
         </div>
     </div>
+    <ul id="nav">
+        <li><a class="btn" href="index.html">Home</a></li>
+        <li><a class="btn" href="resume.html">Resume</a></li>
+        <li><a class="btn" href="interests.html">Interests</a></li>
+        <li><a class="btn" href="goals.html">Goals</a></li>
+        <li><a class="btn" href="projects.html">Projects</a></li>
+    </ul>
     <footer>
         <p>Belmar, NJ</p>
+
     </footer>
 </body>
 
