--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,9 @@
             </header>
             <div class="menu"></div>
             <div class="content">
-                <h1>Goal's are a wonderfull thing.</h1>
-                
-
-                
+                <h1>Future Home for Projects</h1>
+                <h2>This is a work in progress....</h2>
+                <h3>!!!!</h3>    
                 <p>I never understood the power of writing down your goal's until now.</p>
             </div>
             <div id="footer">
