--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             font-weight: bold;
         }
 
-        @media screen and (max-width: 400px) {
+        @media screen and (max-width: 500px) {
             .btn {
                 float: none;
                 width: 100%;
@@ -113,6 +113,16 @@
             header {
                 position: relative;
                 margin-bottom: 150px;
+            }
+
+            #bottom {
+                
+                height: 280px;
+
+            }
+
+            footer {
+                height: 80px;
             }
 
         }
