--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <a href="interests.html">Interests</a>
             <a href="goals.html">Goals</a>
             <a href="projects.html">Projects</a>
+            <p style="float:right">Belmar, NJ<p>
         </nav>
     </footer>
 </body>
