--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             padding: 20px;
         }
 
-        p {
+        #first {
             color: chartreuse;
             text-align: center;
             font-size: 40px;
@@ -138,7 +138,6 @@
     </style>
     <link rel="stylesheet" href="mainStyle.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -152,7 +151,7 @@
     <div id="top">
         <h1>Hello World</h1>
     </div>
-    <p>This is My first Hello World!!! web page.</p>
+    <p id="firts">This is My first Hello World!!! web page.</p>
     <div id="middle">
         <h2>Work in Progress...</h2>
         <h3>
