--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <style>
         @media (min-width: 600px) {
-            p::before {
+            #first::before {
                 content: "Welcome!!! "
             }
         }
