--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <style>
         @media (min-width: 600px) {
-            #first::before {
+            h2::before {
                 content: "Welcome!!! "
             }
         }
@@ -91,7 +91,7 @@
             padding: 20px;
         }
 
-        #first {
+        h2 {
             color: chartreuse;
             text-align: center;
             font-size: 40px;
@@ -151,12 +151,12 @@
     <div id="top">
         <h1>Hello World</h1>
     </div>
-    <p id="firts">This is My first Hello World!!! web page.</p>
+    <h2>This is My first Hello World!!! web page.</h2>
     <div id="middle">
-        <h2>Work in Progress...</h2>
-        <h3>
+        <h3>Work in Progress...</h3>
+        <h4>
             # Following in the foot steps of all other programmers before me.
-        </h3>
+        </h4>
     </div>
     <div id="bottom">
         Believe in Yourself. Believe that anything is possible and remember, It's never too late.
