--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             color: chartreuse;
             text-align: center;
             font-size: 40px;
+            padding: 20px;
         }
 
         footer {
