--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <footer>
-        <p>Belmar, NJ</p>
+        <a href="belmar_map.html">Belmar, NJ</a>
         <ul id="nav">
             <li><a class="btn" href="index.html">Home</a></li>
             <li><a class="btn" href="resume.html">Resume</a></li>
