--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                 <p>I never understood the power of writing down your goal's until now.</p>
             </div>
             <div id="footer">
-                <p>Belmar, NJ</p>
+                <a href="belmar_map.html">Belmar, NJ</a>
             </div>
         </body>
     </html>
