--- a/goals.html
+++ b/goals.html
@@ -37,7 +37,7 @@
                 <p>I never understood the power of writing down your goal's until now.</p>
             </div>
             <div id="footer">
-                <a style="float:right" href="belmar_map.html">Belmar, NJ</a>
+                <a href="belmar_map.html">Belmar, NJ</a>
             </div>
         </body>
     </html>
