--- a/interests.html
+++ b/interests.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             <footer id="footer">
-                <a style="float:right" href="belmar_map.html">Belmar, NJ</a>
+                <a href="belmar_map.html">Belmar, NJ</a>
             </footer>          
         </body>
     </html>
