--- a/resume.html
+++ b/resume.html
@@ -21,22 +21,22 @@
             <h4>Objective</h4>
             <p>To take a position as a software developer/engineer.</p>
             <h4>Experience</h4>
-            <p>Working on that...</p>
+            <p>All of my coding experience comes from my own personal projects.</p>
             <ul>
-                <li>Coming soon...</li>
-                <li>Personal project 0</li>
-                <li>Personal project 1</li>
-                <li>Personal project 2</li>
+                <li>Flask News Web Application      --->   <a href="https://personal-news.herokuapp.com/">Personal News</a></li>
+                <li>Flask Book Review Application   --->   <a href="https://fcomic-book-anime.herokuapp.com/">Books Review</a></li>
+                <li>Flask Baby Name Application     --->   <a href="https://heathersbabyname.herokuapp.com/">Baby Names</a></li>
+                <li>Django Personal Web Site        --->   Still Under Development</li>
             </ul>
             <h4>Skills</h4>
             <p>Languages: Python, JavaScript, SQL</p>
-            <p>Frameworks: Flask, Django, Node.js, React</p>
-            <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap, Unittest, API's, AJAX</p>
-            <p>Tech Studied on side: C/C++, Java, C#</p>
-            <p>Non-Technical: Telemarketing, Service, Residencial Construction</p>
+            <p>Frameworks: Flask, Django</p>
+            <p>Tech Tools: Git, Terminal, Linux, HTML, CSS, Sass, npm, Bootstrap4, Unittest, API's, AJAX, Postgresql, Redis, Heroku, Web Workers, Blender</p>
+            <p>Other Tech Seen: Fortran, C/C++, Java, C#</p>
+            <p>Non-Technical:  Service Industry, Telemarketing, Residencial Construction</p>
             <h4>Education</h4>
             <p>2 Years MAE Rutgers University</p>
-            <p>Self oriented</p>
+            <p>Self Taught Web Developer</p>
         </div>
     </div>
     <footer>
