--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,8 @@
             <p>Non-Technical:  Service Industry, Telemarketing, Residencial Construction</p>
             <h4>Education</h4>
             <p>2 Years MAE Rutgers University</p>
-            <p>Self Taught Web Developer</p>
+            <p>Self Taught Web Developer - By following course material from Harvard College's CSCI E-33a - CS50’s Web Programming with Python and JavaScript</p>
+            <p>Willing to always keep learning new things</p>
         </div>
     </div>
     <footer>
