--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,9 @@
             </header>
             <div class="menu"></div>
             <div class="content">
-                <h1>Future Home for Projects</h1>
+                <h1>Projects</h1>
                 <h2>This is a work in progress....</h2>
-                <h3>!!!!</h3>    
-                <p>I never understood the power of writing down your goal's until now.</p>
+                <h2>All My Code is on ---> <a href="https://github.com/jDavidZapata">Github</a>.</h2>
             </div>
             <div id="footer">
                 <a href="belmar_map.html">Belmar, NJ</a>
